--- a/assets/style.css
+++ b/assets/style.css
@@ -75,7 +75,7 @@ div#navbar{
 .clearfix{
     border: 1px solid #ddd;
     padding: 5px;
-    margin-top: 10px;
+    margin-bottom: 10px;
 }
 .clearfix::after {
     content: "";
@@ -142,4 +142,31 @@ a {
 
 button:hover, a:hover {
   opacity: 0.7;
+}
+
+.author{
+  border: 1px solid #f5f5f5;
+  background: #f5f5f5;
+}
+
+.chip {
+    display: inline-block;
+    padding: 0 25px;
+    height: 50px;
+    font-size: 16px;
+    line-height: 50px;
+    border-radius: 25px;
+    background-color: #f1f1f1;
+}
+
+.chip img {
+    float: left;
+    margin: 0 10px 0 -25px;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+}
+
+.aboutpost{
+  font-size: 16px;
 }
